--- a/.github/workflows/upload_calls.yml
+++ b/.github/workflows/upload_calls.yml
@@ -2,28 +2,29 @@ name: Upload Calls to BigQuery
 
 on:
   schedule:
-    - cron: '1 0 * * *'  # Запуск в 00:01 UTC (каждый день)
-  workflow_dispatch:  # Возможность ручного запуска
+    - cron: "0 3 * * *"  # Запуск каждый день в 03:00 UTC (6:00 MSK)
+  workflow_dispatch:  # Позволяет запускать вручную
 
 jobs:
-  upload:
+  upload_calls:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Repository
+      - name: 🚀 Checkout репозиторий
         uses: actions/checkout@v3
 
-      - name: Setup Python
+      - name: 🔧 Установка Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: "3.9"
 
-      - name: Install Dependencies
-        run: pip install google-cloud-bigquery requests pandas
+      - name: 📦 Установка зависимостей
+        run: pip install google-cloud-bigquery pandas requests
 
-      - name: Authenticate with Google Cloud
-        run: echo '${{ secrets.GCP_SERVICE_ACCOUNT }}' > gcp_key.json
-
-      - name: Run Script
+      - name: 🔄 Запуск скрипта загрузки звонков
         env:
-          GOOGLE_APPLICATION_CREDENTIALS: gcp_key.json
+          GOOGLE_APPLICATION_CREDENTIALS_JSON: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+          UIS_ACCESS_TOKEN: ${{ secrets.UIS_ACCESS_TOKEN }}
+          BQ_PROJECT_ID: ${{ secrets.BQ_PROJECT_ID }}
+          BQ_DATASET_ID: ${{ secrets.BQ_DATASET_ID }}
         run: python upload_calls.py
